test/negative/tuple_return_arity.mut
# ERROR: return wrong number of elements in tuple
def get_pair() -> (i64, str)
    return (1, "a", 3)
end
